[package]
name = "uuidv6"
version = "0.1.1"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "UUIDv6 implementation"
license = "MIT"
repository = "https://github.com/jedisct1/rust-uuidv6"
homepage = "https://github.com/jedisct1/rust-uuidv6"
readme = "README.md"
keywords = ["uid", "uuid", "v6", "uuidv6"]

[dependencies]
getrandom = "0.2.5"
