[package]
name = "uuidv6"
version = "0.1.5"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "UUIDv6 implementation"
license = "MIT"
repository = "https://github.com/jedisct1/rust-uuidv6"
homepage = "https://github.com/jedisct1/rust-uuidv6"
readme = "README.md"
keywords = ["uid", "uuid", "v6", "uuidv6"]

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", optional = false, features = ["js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
getrandom = { version = "0.2", optional = false }

coarsetime = "0.1"
